# boilerplate

./: README.md
Elixir-Boilerplate/: elixirstandard.gitignore
Python-Boilerplate/: justfile  older-poetry-pre-commit  pyproject-partial.toml  pyproject.toml  python-common-commands.md  python-pre-commit  pythonstandard.gitignore  rye-pre-commit  rye-pyproject.toml
Python-Boilerplate/old_managers/: older-pyproject-partial.toml
Python-Boilerplate/old_managers/poetry/: older-poetry-pre-commit  python-common-commands.md
Python-Boilerplate/old_managers/poetry/.github/workflows/: test-poet.yml
Python-Boilerplate/old_managers/rye/: older-rye-pre-commit  older-rye-pyproject.toml
Python-Boilerplate/python.circleci/: config.yml
Python-Boilerplate/python.github/workflows/: github-actions-demo.yml  matrix_test_and_publish.yml  pdoc-pub.yml  test-poet.yml
Python-Boilerplate/support/: commit-msg  pre-commit  template.env
Rust-Boilerplate/: .gitignore  .rustfmt.toml  committed.toml  counter-lints.md  dependencies.md  ext_dependencies.csv  ext_deps.csv  justfile  libmain.rs  rust-Cargo.toml  rust-common-commands.md  rust-pre-commit  rustbp-.gitignore  rustbp-clap.rs  rustbp-common-commands.md  rustbp-dependencies.md  rustbp-justfile  rustbp-libmain.rs  rustbp-nightly-rustfmt.toml  rustbp-pre-commit  rustbp-rustfmt.toml  rustbp-typos.toml  rustbp-workspace-Cargo.toml  rustfmt.toml  ruststandard.gitignore  stable-rustfmt.toml  typos.toml  workspace-Cargo.toml
Rust-Boilerplate/support/: commit-msg  pre-commit  template.env
